Added shared website data/ folder. Updated blog entries to have sections. Added initial compatdb. Added static assets for compatdb.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -58,7 +58,7 @@
     {{ block "header" . }}{{ end }}
 
     {{ $full_width := .Params.FullWidth | default false }}
-    {{- if eq .IsPage false }}
+    {{- if .IsHome }}
         <div class="container">
             {{ block "main" . }}{{ end }}
         </div>
