--- a/layouts/entry/single.html
+++ b/layouts/entry/single.html
@@ -24,9 +24,9 @@
 {{ end }}
 
 {{ define "main" }}
-<div class="content pt-sm">
+<section class="section content pt-sm">
     {{ .Content }}
-</div>
+</section>
 
 {{ if .Params.forum }}
 <div class="has-text-centered">
