Updated generating meta information for the homepage. Fixed margins on mobile menu, added icons next to external services (twitter, discord, etc.)

--- a/layouts/partials/layout/navbarContents.html
+++ b/layouts/partials/layout/navbarContents.html
@@ -35,14 +35,14 @@
             </a>
             {{ end }} {{ end }}
 
-            <a class="navbar-item is-hidden-desktop" href="{{ .Site.Params.DiscordURL }}" target="_blank">
-                discord
+            <a class="navbar-item px-lg is-hidden-desktop" href="{{ .Site.Params.DiscordURL }}" target="_blank">
+                <i class="fab fa-discord mr-sm"></i> discord
             </a>
-            <a class="navbar-item is-hidden-desktop" href="{{ .Site.Params.TwitterURL }}" target="_blank">
-                twitter
+            <a class="navbar-item px-lg is-hidden-desktop" href="{{ .Site.Params.TwitterURL }}" target="_blank">
+                <i class="fab fa-twitter mr-sm"></i> twitter
             </a>
-            <a class="navbar-item is-hidden-desktop" href="{{ .Site.Params.GithubURL }}" target="_blank">
-                github
+            <a class="navbar-item px-lg is-hidden-desktop" href="{{ .Site.Params.GithubURL }}" target="_blank">
+                <i class="fab fa-github mr-sm"></i> github
             </a>
         </div>
 
