--- a/layouts/screenshots/single.html
+++ b/layouts/screenshots/single.html
@@ -28,9 +28,12 @@
 </section>
 {{ end }}
 
+{{ define "css" }}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" type="text/css" />
+{{ end }}
+
 {{ define "scripts" }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" type="text/css" />
 
 <script type="text/javascript">
     window.addEventListener("DOMContentLoaded", function() {
