Fix read more button on Chrome

--- a/layouts/partials/entry/summary.html
+++ b/layouts/partials/entry/summary.html
@@ -1,7 +1,7 @@
 {{ if .Params.twitter }}
 <div class="mb-md blog-entry-header summary twitter" style="background-image: none;" data-href="{{ .Params.twitterUrl }}">
     <div class="px-md has-text-weight-semibold">
-        <span class="h3">{{ .Date.Format $.Site.Params.fmt.Date }}</span> - 
+        <span class="h3">{{ .Date.Format $.Site.Params.fmt.Date }}</span> -
         <span class="h3 moment-timeago">{{ .Date.Format $.Site.Params.fmt.ISO8601 }}</span>
     </div>
     <div class="mt-md px-md">
@@ -20,14 +20,14 @@
         <span class="title">{{ .Title }}</span>
     </div>
     <div class="px-md">
-        <span class="h3">{{ .Date.Format $.Site.Params.fmt.Date }}</span> - 
+        <span class="h3">{{ .Date.Format $.Site.Params.fmt.Date }}</span> -
         <span class="h3 moment-timeago">{{ .Date.Format $.Site.Params.fmt.ISO8601 }}</span>
     </div>
     <div class="mt-md px-md">
         <span class="h3">{{ .Summary }}</span>
     </div>
-    <div style="position: absolute; bottom: 0; right: 0;">
-        <span class="h3 px-md py-sm has-background-dark">
+    <div style="position: absolute; bottom: -5px; right: 0;" class="px-md py-sm has-background-dark">
+        <span class="h3">
             <a href="{{ .Permalink }}">Read More</a>
         </span>
     </div>
