Fix Hugo interpreting comment as shortcode

--- a/layouts/shortcodes/gifv.html
+++ b/layouts/shortcodes/gifv.html
@@ -1,4 +1,4 @@
-<!-- Usage: {{< gifv "url|title" "url2|title" >}} -->
+<!-- Usage: gifv "url|title" "url2|title" -->
 <div class="columns">
     {{ range $param := .Params }}
     <!-- gifv -->
