Added help layout. Modified list theme.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,15 +1,14 @@
-{{ define "main" }} {{ $paginator := .Paginate .Data.Pages }}
-
-<section class="section">
+{{ define "main" }}
+<section class="section" style="padding-bottom: 0px;">
     <h1 class="title">{{ .Title }}</h1>
-
-    <div class="columns is-multiline">
-        {{ range $paginator.Pages }}
-        <div class="column is-6">
+    <p>{{ .Content }}</p>
+    
+    <div class="columns is-multiline" style="margin-top: 4px;">
+        {{ range .Pages }}
+        <div class="column is-12">
             {{ .Render "summary" }}
         </div>
         {{ end }}
     </div>
 </section>
-
-{{ partial "layout/pagination" . }} {{ end }}
+{{ end }}
