--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,6 +1,9 @@
-<a class="is-size-6" href="{{ .Permalink }}">
-    <span class="icon">
-        <i class="fas fa-file-alt"></i>
-    </span>
-    {{ .Title }}
-</a>
+<div>
+    <a class="is-size-6" href="{{ .Permalink }}">
+        <span class="icon">
+            <i class="fas fa-file-alt"></i>
+        </span>
+        {{ .Title }}
+    </a>
+    <p style="margin-left: 28px;">{{ .Description }}</p>
+</div>
