--- a/layouts/game/list.html
+++ b/layouts/game/list.html
@@ -18,7 +18,7 @@
             </tbody>
         </table>
 
-        <div id="highchart-container" style="height: 100px; margin: 0 auto"></div>
+        <!-- <div id="highchart-container" style="height: 100px; margin: 0 auto"></div> -->
     </div>
 </div>
 {{ end }}
@@ -64,7 +64,7 @@
 {{ end }}
 
 {{ define "scripts" }}
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	$(function() {
 		function getLastSorted(list){
 			var currentSorted = $(list.listContainer).find(".asc, .desc").attr("data-sort");
@@ -153,5 +153,5 @@
 				]
 		});
 	});
-</script>
+</script> -->
 {{ end }}
