--- a/layouts/game/single.html
+++ b/layouts/game/single.html
@@ -30,7 +30,7 @@
 {{ define "main" }}
 {{ $gameId := .File.BaseFileName }}
 {{ $rating := index .Site.Data.compatibility .Params.compatibility }}
-<section class="section content pt-sm">
+<section class="section content pt-lg">
     {{- if eq .Params.incomplete true }}
     <article class="message is-danger is-size-7">
         <div class="message-body">
@@ -49,9 +49,15 @@
 
     <article class="message is-size-7">
         <div class="message-body">
+            {{ if .Content }}
             <p>The below game entry is based on user submitted content.</p>
             <p>See a mistake? Want to contribute? <a href="{{ .Site.Params.GithubGamesWikiURL }}/wiki/{{ .File.BaseFileName }}/_edit/">Edit
                     this article on Github</a></p>
+            {{ else }}
+            <p>The below game entry is based on user submitted content.</p>
+            <p>See a mistake? Want to contribute? <a href="{{ .Site.Params.GithubGamesWikiURL }}/wiki/{{ .File.BaseFileName }}/">Edit
+                    this article on Github</a></p>
+            {{ end }}
         </div>
     </article>
 
@@ -66,11 +72,10 @@
     {{ end }}
 
     <h2>Compatibility</h2>
-    {{ if gt (len .Params.issues) 0 }}
+    {{ if gt (len .Params.testcases) 0 }}
     <table class="table">
         <thead>
             <tr>
-                <th class="advanced-view">ID</th>
                 <th>Build Date</th>
                 <th>Tested By</th>
                 <th>Hardware</th>
@@ -83,7 +88,6 @@
             {{ range .Params.testcases }}
             {{- $rating := index $siteCompatibility .compatibility }}
             <tr class="is-size-7">
-                <td class="advanced-view">{{ if isset . "id" }} {{ .id }} {{ end }}</td>
                 <td>{{ if isset . "buildDate" }} {{ dateFormat "01/2/2006" .buildDate }} {{ end }}</td>
                 <td>
                     <a href="https://community.citra-emu.org/u/{{ .author }}/summary">{{ .author }}</a>
@@ -92,10 +96,10 @@
                 <td>{{ .cpu }}<br />{{ .gpu }}<br />{{ .os }}</td>
                 <td>{{ if isset . "buildName" }}{{ .buildName }} Build<br />{{ end }}{{ .version }}</td>
                 <td>
-                    <b>
-                        <div class="square-icon" style="background-color: {{ $rating.color }}"></div>
+                    <div>
+                        <span class="is-square" style="background-color: {{ $rating.color }};"></span>
                         {{ $rating.name}}
-                    </b>
+                    </div>
                 </td>
             </tr>
             {{ end }}
