Corrected paste error.

--- a/layouts/game/single.html
+++ b/layouts/game/single.html
@@ -162,6 +162,6 @@
     </div>
     {{ else }}
     <p>No screenshots have been uploaded for this game.</p>
-    {{ end }}https://citra-emu.org/game/new-super-mario-bros-2/
+    {{ end }}
 </section>
 {{ end }}
