Fixed single-image img shortcode not being centered.

--- a/layouts/shortcodes/imgs.html
+++ b/layouts/shortcodes/imgs.html
@@ -6,7 +6,7 @@
     {{ $title := (index $items 1) }}
     {{ $split_src := split $src "." }}
     {{ $extension := index $split_src (sub (len $split_src) 1) }}
-    <div class="column">
+    <div class="column has-text-centered">
         {{ if eq $extension "mp4" }}
             <video preload="auto" autoplay="autoplay" muted="muted" loop="loop" webkit-playsinline="">
                 <source src="{{ $src }}" type="video/mp4">
