Updated bounties page.

--- a/layouts/page/bounties.html
+++ b/layouts/page/bounties.html
@@ -6,54 +6,78 @@
             {{ .Content }}
         </div>
 
-        <table class="table is-fullwidth">
-            <thead>
-                <tr>
-                    <th>Date Submitted</th>
-                    <th>Requester</th>
-                    <th>Developer</th>
-                    <th>Status</th>
-                    <th>Amount</th>
-                    <th>Description</th>
-                    <th>Payment Status</th>
-                    <th>Developer Response</th>
-                    <th>Date Expires</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{ range .Site.Data.bounties }}
-                <tr>
-                    <td>
-                        {{ .DateSubmitted }}
-                    </td>
-                    <td>
-                        {{ .Requester }}
-                    </td>
-                    <td>
-                        {{ .Developer }}
-                    </td>
-                    <td>
-                        {{ .Status }}
-                    </td>
-                    <td>
-                        {{ .Amount }}
-                    </td>
-                    <td>
-                        {{ .Description }}
-                    </td>
-                    <td>
-                        {{ .PaymentStatus }}
-                    </td>
-                    <td>
-                        {{ .DeveloperResponse }}
-                    </td>
-                    <td>
-                        {{ .DateExpires }}
-                    </td>
-                </tr>
+        <section class="section">
+            <div class="content">
+                <h3 class="is-size-3">Pending Bounties</h3>
+                {{ range where .Site.Data.bounties "Status" "Unassigned" }}
+                <div style="margin-bottom: 12px;">
+                    <div class="has-text-weight-semibold">{{ .Description }}</div>
+                    <div style="margin-left: 48px;">
+                        <table class="table is-fullwidth">
+                            <thead>
+                                <tr>
+                                    <th class="has-text-weight-normal">Date Submitted</th>
+                                    <th class="has-text-weight-normal">Requester</th>
+                                    <th class="has-text-weight-normal">Amount</th>
+                                    <th class="has-text-weight-normal">Expires Date</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {{ range .Requestors }}
+                                <tr>
+                                    <td>{{ .DateSubmitted }}</td>
+                                    <td>{{ .Name }}</td>
+                                    <td>{{ .Amount }}</td>
+                                    <td>{{ .DateExpires }}</td>
+                                </tr>
+                                {{ end }}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
                 {{ end }}
-            </tbody>
-        </table>
-    </section>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="content">
+                <h3 class="is-size-3">Completed Bounties</h3>
+                {{ range where .Site.Data.bounties "Status" "Completed" }}
+                <div class="py-3">
+                    <div class="has-text-weight-semibold">{{ .Description }}</div>
+                    <div>{{ .Status }} by {{ .Developer }} - {{ .Response }}</div>
+                    <div style="margin-left: 48px;">
+                        <table class="table is-fullwidth">
+                            <thead>
+                                <tr>
+                                    <th class="has-text-weight-normal">Date Submitted</th>
+                                    <th class="has-text-weight-normal">Requester</th>
+                                    <th class="has-text-weight-normal">Amount</th>
+                                    <th class="has-text-weight-normal">Paid</th>
+                                    <th class="has-text-weight-normal">Expires Date</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {{ range .Requestors }}
+                                <tr>
+                                    <td>{{ .DateSubmitted }}</td>
+                                    <td>{{ .Name }}</td>
+                                    <td>{{ .Amount }}</td>
+                                    {{ if eq .Paid true }}
+                                        <td>Yes</td>
+                                    {{ else }}
+                                        <td>No</td>
+                                    {{ end }}
+                                    <td>{{ .DateExpires }}</td>
+                                </tr>
+                                {{ end }}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                {{ end }}
+            </div>
+        </section>
+
 </div>
 {{ end }}
