layouts/shortcode: show thumbnails by default

--- a/layouts/shortcodes/single-title-imgs.html
+++ b/layouts/shortcodes/single-title-imgs.html
@@ -15,7 +15,7 @@
             </video>
         {{ else }}
             <a href="{{ $src }}" title="{{ $subtitle }}">
-                <img src="{{ $src }}" alt="{{ $subtitle }}">
+                <img src="{{ $src }}.jpg" alt="{{ $subtitle }}">
             </a>
         {{ end }}
     </div>
