--- a/layouts/shortcodes/imgs.html
+++ b/layouts/shortcodes/imgs.html
@@ -14,7 +14,7 @@
             </video>
         {{ else }}
             <a href="{{ $src }}" title="{{ $title }}">
-                <img src="{{ $src }}" alt="{{ $title }}">
+                <img src="{{ $src }}.jpg" alt="{{ $title }}">
             </a>
         {{ end }}
         {{ if $title }}
