Fix navbar capitalization

--- a/layouts/partials/layout/navbarContents.html
+++ b/layouts/partials/layout/navbarContents.html
@@ -36,13 +36,13 @@
             {{ end }} {{ end }}
 
             <a class="navbar-item px-lg is-hidden-desktop" href="{{ .Site.Params.DiscordURL }}" target="_blank">
-                <i class="fab fa-discord mr-sm"></i> discord
+                <i class="fab fa-discord mr-sm"></i> Discord
             </a>
             <a class="navbar-item px-lg is-hidden-desktop" href="{{ .Site.Params.TwitterURL }}" target="_blank">
-                <i class="fab fa-twitter mr-sm"></i> twitter
+                <i class="fab fa-twitter mr-sm"></i> Twitter
             </a>
             <a class="navbar-item px-lg is-hidden-desktop" href="{{ .Site.Params.GithubURL }}" target="_blank">
-                <i class="fab fa-github mr-sm"></i> github
+                <i class="fab fa-github mr-sm"></i> GitHub
             </a>
         </div>
 
